# conjugate_map

./: .zenodo.json  20230803-11-15-supermag-stations.csv  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConjugateMap.ipynb  README.md  README.rst  conjCalcFunctions.py  flowchart.html  index.html  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: main.yml  pylint.yml  python-publish.yml
conjugate-map/: __init__.py  conjCalcFunctions.py
conjugate_map/: __init__.py  conjCalcFunctions.py  conj_calc.py
conjugate_map/tests/: __init__.py  __init__.txt  test_conjcalc.py
docs/: api.rst  architecture.md  conf.py  index.rst  requirements.in  requirements.txt  usage.rst
input/: eclipse20170821.txt.100km.hiRes  eclipse20170821.txt.300km.hiRes  eclipse20210610.txt.000km.hiRes  eclipse20210610.txt.200km.hiRes  eclipse20211204.txt.200km.hiRes  eclipse20211204.txt.300km.hiRes  eclipse20211204.txt.500km.hiRes  eclipse20240408.txt.300km.hiRes
notebooks/: ConjugateMap.ipynb  Field Line Trace Demo.ipynb  Graticules Improved.ipynb  MWE.ipynb  eclipse20170821.txt.000km.hiRes.txt  madrigal.csv
notebooks/add_coastline_high_res_line_v7_7.shp/: add_coastline_high_res_line_v7_7.sbn  add_coastline_high_res_line_v7_7.sbx  add_coastline_high_res_line_v7_7.shp.xml  add_coastline_high_res_line_v7_7.shx
notebooks/binder/: requirements.txt
notebooks/input/: 0readme  PGC Conjugate Map Points.csv  eclipse20170821.txt.000km.hiRes  eclipse20170821.txt.200km.hiRes  eclipse20170821.txt.400km.hiRes  eclipse20170821.txt.500km.hiRes  eclipse20210610.txt.100km.hiRes  eclipse20210610.txt.300km.hiRes  eclipse20210610.txt.400km.hiRes  eclipse20210610.txt.500km.hiRes  eclipse20211204.txt.000km.hiRes  eclipse20211204.txt.100km.hiRes  eclipse20211204.txt.400km.hiRes  eclipse20231014.txt.150km.hiRes  eclipse20231014.txt.300km.hiRes  eclipse20240408.txt.150km.hiRes
notebooks/output/: Graticule_ -50_2023-09-28 02:40:56.873516.gpx  Graticule_ -60_2023-09-28 02:40:56.873516.gpx  Graticule_ -70_2023-09-28 02:40:56.873516.gpx  Graticule_ -80_2023-09-28 02:40:56.873516.gpx  Graticule_ -90_2023-09-28 02:40:56.873516.gpx  all-stations.html  conj-Ant.gpx  conj-stations-south.html  conj-stations.html  eclipse.gpx  eclipse20170821.txt.300km.hiRes.gpx  eclipse20170821.txt.400km.hiRes.gpx  eclipse20170821.txt.500km.hiRes.gpx  eclipse20210610.txt.000km.hiRes.gpx  eclipse20210610.txt.100km.hiRes.gpx  eclipse20210610.txt.200km.hiRes.gpx  eclipse20210610.txt.300km.hiRes.gpx  eclipse20210610.txt.400km.hiRes.gpx  eclipse20210610.txt.500km.hiRes.gpx  eclipse20211204.txt.200km.hiRes.gpx  eclipse20211204.txt.300km.hiRes.gpx  eclipse20231014.txt.150km.hiRes.gpx  eclipse20240408.txt.150km.hiRes.gpx  eclipse20240408.txt.300km.hiRes.gpx  stations-over-time.csv  stations.csv  stations_N2S_aacgm.csv  stations_S2N_aacgm.csv
output/: README.txt  conj-Ant.gpx  conj-stations-south.html  conj-stations.html  eclipse20170821.txt.100km.hiRes.gpx  eclipse20170821.txt.200km.hiRes.gpx  eclipse20211204.txt.000km.hiRes.gpx  eclipse20211204.txt.100km.hiRes.gpx  eclipse20211204.txt.400km.hiRes.gpx  eclipse20211204.txt.500km.hiRes.gpx  eclipse20231014.txt.300km.hiRes.gpx  stations.csv  stations_N2S_aacgm.csv  stations_S2N_aacgm.csv
pages/: README.md
tests/: __init__.txt  test_conjcalc.py
(+36 files in other folders)
