[build-system]
requires = ["oldest-supported-numpy", "setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "conjugate_map"
version = "0.2.0"
license = {file = "LICENSE"}
description = 'Library for computing geomagnetic conjugate points.'
maintainers = [
    {name = "Kristina V. Collins", email = "kvcollins@spacescience.org"}
]
requires-python = ">=3.9"
dependencies = [
    "aacgmv2",
    "geopack",
    "gpxpy",
    "numpy",
    "pandas",
    "plotly",
]
readme = "README.md"
keywords = [
    "coordinates",
    "ionosphere",
    "atmosphere",
    "thermosphere",
    "magnetosphere",
    "heliosphere",
    "observations",
    "models",
    "analysis",
    "conjugate",
    "geomagnetic",
    "instruments",
    "mapping",
    "visualization",
    "plotting",
    "Antarctica"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
source = "https://github.com/KCollins/conjugate_map"
documentation = "https://conjugate-map.readthedocs.io/en/latest"
download = "https://github.com/KCollins/conjugate_map/releases"

[tool.coverage.run]
relative_files = true
include = ["*/conjugate_map/*",
           "*/conjugate_map/tests/*"]

[tool.coverage.paths]
ocb_paths = ["conjugate_map/",
             "*/lib/*/site-packages/conjugate_map"]

[tool.setuptools]
packages = ["conjugate_map"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "R0912,R0913,R0914,R0915,R0917,C0103,W0622"
